# actix-actorless-websockets

./: Cargo.toml
examples/chat/: Cargo.toml
examples/chat/src/: main.rs
src/: fut.rs  lib.rs  session.rs
