[package]
name = "actix-ws"
description = "Websockets for the Actix runtime, without Actors"
version = "0.1.0-alpha.1"
authors = ["asonix <asonix@asonix.dog>"]
readme = "README.md"
repository = "https://git.asonix.dog/asonix/actix-actorless-websockets"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "examples/chat"
]

[dependencies]
actix-http = "3.0.0-beta.9"
actix-rt = "2"
actix-web = "4.0.0-beta.8"
anyhow = "*"
bytes = "*"
bytestring = "*"
futures = "*"
pin-project = "*"
thiserror = "*"
tokio = { version = "*", features = ["sync", "io-util"] }
tokio-util = { version = "*", features = ["codec"] }
tokio-stream = { version = "*", default-features = false }
