[package]
name = "chat"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
actix-web = "4.0.0-beta.3"
actix-ws = { version = "0.1.0-alpha.0", path = "../.." }
anyhow = "1"
futures = "0.3"
log = "*"
pretty_env_logger = "*"
tokio = { version = "1", features = ["sync"] }
